--- a/src/Fishworks.ECS.csproj
+++ b/src/Fishworks.ECS.csproj
@@ -40,9 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseMessage.cs" />
     <Compile Include="BaseSystem.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EntityStatusComponent.cs" />
+    <Compile Include="Extensions\ArrayExtensions.cs" />
+    <Compile Include="Extensions\DynamicExtensions.cs" />
+    <Compile Include="Extensions\QueueExtensions.cs" />
     <Compile Include="IComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="World.cs" />
